Closed
Bug 84654
Opened 25 years ago
Closed 24 years ago
Image blocking doesn't block background image
Categories
(Core :: Graphics: ImageLib, defect, P3)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
mozilla0.9.9
People
(Reporter: doctor__j, Assigned: pavlov)
References
Details
(Whiteboard: needs r= and sr=)
Attachments
(2 files, 1 obsolete file)
|
178 bytes,
text/html
|
Details | |
|
4.68 KB,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:0.9.1+) Gecko/20010607
BuildID: 2001060709
Reproducible: Always
Steps to Reproduce:
1. Go to Pref menu
2. In "Privacy and Security -> Images", select "Do not load any images"
3. Load the testcase.
Actual Results: Background image is loaded.
Expected Results: No background image is loaded whatsoever.
Comment 2•25 years ago
|
||
-> Imagelib
Assignee: asa → pavlov
Component: Browser-General → ImageLib
QA Contact: doronr → tpreston
Updated•25 years ago
|
OS: Windows 98 → All
Comment 3•25 years ago
|
||
->morse
Assignee: pavlov → morse
Component: ImageLib → Cookies
QA Contact: tpreston → tever
Comment 4•25 years ago
|
||
Actually imagelib is the right component for this. The cookie module handles
the permissions for whether or not to load the image, but it is up to imagelib
to make a call into the cooke module to obtain the permission. Reassigning back
to imagelib.
Assignee: morse → pavlov
Component: Cookies → ImageLib
QA Contact: tever → tpreston
| Assignee | ||
Comment 5•25 years ago
|
||
this will be fixed when i remove old imagelib.
adding dep...
*** Bug 86344 has been marked as a duplicate of this bug. ***
Comment 10•25 years ago
|
||
Doesn't look like this is getting fixed before the freeze tomorrow night.
Pushing out a milestone. Please correct if I'm mistaken.
Target Milestone: mozilla0.9.3 → mozilla0.9.4
Comment 11•25 years ago
|
||
*** Bug 94509 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•25 years ago
|
||
| Assignee | ||
Updated•25 years ago
|
Target Milestone: mozilla0.9.4 → mozilla0.9.5
Comment 13•25 years ago
|
||
See also bug 97216, Referer is not sent on background image.
Comment 14•25 years ago
|
||
*** Bug 101895 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla0.9.6 → mozilla0.9.8
| Assignee | ||
Updated•24 years ago
|
Whiteboard: needs r= and sr=
| Assignee | ||
Updated•24 years ago
|
Priority: P4 → P3
Comment 16•24 years ago
|
||
I ran into this bug when trying to block the images at this URL:
http://toolbar.netscape.com/tw_hat/iframe/cnn.html
The mail button is actually a background image for the table cell and therefore
still loads.
Comment 17•24 years ago
|
||
*** Bug 107312 has been marked as a duplicate of this bug. ***
Comment 18•24 years ago
|
||
is the patch still valid?
to reproduce this one:
1. first block all images from ad.ads.dk. View the
http://ad.ads.dk/mediesalg/jobline/140x350hvemtrordu.gif image and block from
this server
2. load http://bugzilla.mozilla.org/attachment.cgi?id=58362&action=view
the background image will show...
build 20020103
| Assignee | ||
Comment 19•24 years ago
|
||
updated fix to work with the trunk
Attachment #46204 -
Attachment is obsolete: true
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla0.9.8 → mozilla0.9.9
Comment 20•24 years ago
|
||
Comment on attachment 65302 [details] [diff] [review]
fix
r=bryner
Attachment #65302 -
Flags: review+
Comment 21•24 years ago
|
||
The patch looks ok, but I'm a little concerned about the performance hit. We
should keep an eye on the tinderbox numbers. sr=sfraser
Hardware: PC → All
| Assignee | ||
Comment 22•24 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 23•24 years ago
|
||
I think this new code is causing a crasher in mailnews (and other places.)
see #126033
Comment 24•24 years ago
|
||
Verified BuildID: 2002021503 WINNT 4 SP6
BTW. I don't use MailNews
Comment 25•24 years ago
|
||
*** Bug 126623 has been marked as a duplicate of this bug. ***
Comment 26•24 years ago
|
||
*** Bug 129487 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•