Fixing bug 84654.  r=bryner sr=sfraser.  image blocking should not block backgrounds if you use it